--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Zerithium",
+  "name": "zerithium",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -14,12 +14,12 @@
     "@ant-design/icons": "^5.3.6",
     "@fontsource-variable/outfit": "^5.2.5",
     "@metamask/sdk": "^0.20.3",
-    "@rainbow-me/rainbowkit": "^2.0.6",
     "@tanstack/react-query": "^5.32.1",
     "@wagmi/core": "^2.9.6",
     "antd": "^5.16.4",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
+    "connectkit": "^1.9.0",
     "dayjs": "^1.11.10",
     "ethers": "^6.12.1",
     "immer": "^10.0.4",
